# webmock

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml  feature_request.md  issue_template.md  pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: CONFIGURATION.md  INSTALLATION.md  README.md  TROUBLESHOOTING.md
docs/examples/: README.md  create_test_snapshot.rs  error_handling_demo.rs  usage-examples.md
scripts/: coverage.sh  install.sh
src/: lib.rs  test_utils.rs
src/capture/: mod.rs  network.rs  performance.rs  resource_manager.rs  validation.rs
src/capture/browser/: browser_controller.rs  mod.rs
src/capture/metrics/: memory_tracker.rs  memory_tracker_tests.rs  mod.rs  performance_metrics.rs  performance_monitor.rs  request_timer.rs
src/capture/proxy/: client_pool.rs  mod.rs  recorder.rs  streaming.rs
src/capture/session/: mod.rs  session_workflow.rs  types.rs
src/capture/tests/: mod.rs  resource_manager_tests.rs
src/cli/: mod.rs  tests.rs
src/commands/: inspect.rs  mod.rs
src/commands/capture/: execution.rs  mod.rs  storage.rs  (+1 more)
src/error/: mod.rs  tests.rs
src/feedback/: chrome_detection.rs  core.rs  error_display.rs  mod.rs  progress.rs  user_feedback.rs  validation.rs
src/serve/: mod.rs
src/storage/: mod.rs  serialization.rs  types.rs
tests/: cli_integration_tests.rs  command_integration_tests.rs  error_handling_tests.rs  integration_tests.rs  resource_type_tests.rs  workflow_tests.rs
tests/integration/: core_workflows.rs  error_scenarios.rs  helpers.rs  mod.rs  resource_types.rs
(+81 files in other folders)
